add stock functionality